# injm

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  ROADMAP.md  flake.nix  justfile
.github/workflows/: ci.yml  lint.yml  release.yml
src/: checker.rs  cli.rs  detector.rs  extractor.rs  injector.rs  io.rs  main.rs  marker.rs  output.rs  types.rs
src/checker/: check.rs  checker.rs  error.rs  file.rs  id.rs  mod.rs
src/cmd/: check.rs  inject.rs  list.rs  mod.rs  utils.rs
src/core/: checker.rs  detector.rs  extractor.rs  inject.rs  marker.rs  mod.rs  parse.rs  parser.rs  types.rs
src/injector/: error.rs  inject.rs  mod.rs
src/parser/: comment.rs  detector.rs  error.rs  marker.rs  mod.rs  pattern.rs
src/validator/: error.rs  file.rs  id.rs  mod.rs
tests/: check.rs  inject.rs  integration.rs  list.rs
