[package]
name = "injm"
description = "A CLI tool that injects content into marked regions in source files."
version = "0.4.0"
edition = "2024"
license = "MIT"
keywords = ["cli", "inject", "code", "marker"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Fovir-GitHub/injm"
homepage = "https://github.com/Fovir-GitHub/injm"
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tree-sitter-language-pack = "1.12.0"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
