[package]
name = "injm"
description = "A CLI tool that injects content into marked regions in source files."
version = "0.5.1"
edition = "2024"
license = "MIT"
keywords = ["cli", "inject", "code", "marker"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Fovir-GitHub/injm"
homepage = "https://github.com/Fovir-GitHub/injm"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
tabled = "0.21.0"
thiserror = "2.0.18"
tree-sitter-language-pack = "1.12.0"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
